add style and css

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <title>MainPage</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="nav-link"><a class="" href="#">Студия</a></li>
+          <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
+          <li class="nav-link"><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
+      <ul class="nav-address">
+        <li class="address-link">
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="address-link">
           <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
