--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
       <nav class="nav">
         <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="nav-list">
-          <li class="nav-link"><a class="" href="#">Студия</a></li>
-          <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
-          <li class="nav-link"><a href="">Контакты</a></li>
+          <li><a class="nav-link" class="" href="#">Студия</a></li>
+          <li><a class="nav-link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="nav-address">
-        <li class="address-link">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li>
+          <a class="address-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li class="address-link">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <li>
+          <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
