--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
