--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
     </header>
     <main>
       <section class="hero">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="hero-head">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section>
         <h2>Особенности</h2>
