--- a/index.html
+++ b/index.html
@@ -43,32 +43,32 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section>
-        <h2>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+        <h2 class="quality-title">Особенности</h2>
+        <ul class="quality">
+          <li class="quality-card">
+            <h3 class="quality-card-title">Внимание к деталям</h3>
+            <p class="quality-info">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="quality-card">
+            <h3 class="quality-card-title">Пунктуальность</h3>
+            <p class="quality-info">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="quality-card">
+            <h3 class="quality-card-title">Планирование</h3>
+            <p class="quality-info">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="quality-card">
+            <h3 class="quality-card-title">Современные технологии</h3>
+            <p class="quality-info">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -76,8 +76,8 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="work-list">
           <li>
             <img src="./images/1.jpg" width="370" alt="programmer-working" />
           </li>
@@ -90,7 +90,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="workers-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/team-1.jpg" width="270" alt="team-1" />
