--- a/index.html
+++ b/index.html
@@ -91,40 +91,46 @@
       </section>
       <section>
         <h2 class="workers-title">Наша команда</h2>
-        <ul>
-          <li>
+        <ul class="workers-list">
+          <li class="worker-info">
             <img src="./images/team-1.jpg" width="270" alt="team-1" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="worker-title">Игорь Демьяненко</h3>
+            <p class="worker-prof" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="worker-info">
             <img src="./images/team-2.jpg" width="270" alt="team-2" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="worker-title">Ольга Репина</h3>
+            <p class="worker-prof" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="worker-info">
             <img src="./images/team-3.jpg" width="270" alt="team-3" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="worker-title">Николай Тарасов</h3>
+            <p class="worker-prof" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="worker-info">
             <img src="./images/team-4.jpg" width="270" alt="team-4" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="worker-title">Михаил Ермаков</h3>
+            <p class="worker-prof" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
+    <footer class="footer">
+      <a class="logo-footer" href="/"
+        ><span class="logo-style">Web</span>Studio</a
+      >
+      <address class="address">
+        <p class="address-info">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="footer-list">
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="address-list" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="address-list" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
