update html and css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section>
-        <h2 class="quality-title">Особенности</h2>
+        <h2 class="hidden-title">Особенности</h2>
         <ul class="quality">
           <li class="quality-card">
             <h3 class="quality-card-title">Внимание к деталям</h3>
