--- a/index.html
+++ b/index.html
@@ -4,71 +4,66 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>MainPage</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>MainPage</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="nav">
+    <header>
+      <nav>
         <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
-        <ul class="nav-list">
-          <li><a class="nav-link" class="" href="#">Студия</a></li>
-          <li><a class="nav-link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="nav-link" href="">Контакты</a></li>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="nav-address">
+      <ul>
         <li>
-          <a class="address-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="hero-head">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
       </section>
       <section>
-        <h2 class="hidden-title">Особенности</h2>
-        <ul class="quality">
-          <li class="quality-card">
-            <h3 class="quality-card-title">Внимание к деталям</h3>
-            <p class="quality-info">
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="quality-card">
-            <h3 class="quality-card-title">Пунктуальность</h3>
-            <p class="quality-info">
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="quality-card">
-            <h3 class="quality-card-title">Планирование</h3>
-            <p class="quality-info">
+          <li>
+            <h3>Планирование</h3>
+            <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="quality-card">
-            <h3 class="quality-card-title">Современные технологии</h3>
-            <p class="quality-info">
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -76,8 +71,8 @@
         </ul>
       </section>
       <section>
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
+        <h2>Чем мы занимаемся</h2>
+        <ul>
           <li>
             <img src="./images/1.jpg" width="370" alt="programmer-working" />
           </li>
@@ -90,45 +85,45 @@
         </ul>
       </section>
       <section>
-        <h2 class="workers-title">Наша команда</h2>
-        <ul class="workers-list">
-          <li class="worker-info">
+        <h2">Наша команда</h2>
+        <ul>
+          <li>
             <img src="./images/team-1.jpg" width="270" alt="team-1" />
-            <h3 class="worker-title">Игорь Демьяненко</h3>
-            <p class="worker-prof" lang="en">Product Designer</p>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
-          <li class="worker-info">
+          <li>
             <img src="./images/team-2.jpg" width="270" alt="team-2" />
-            <h3 class="worker-title">Ольга Репина</h3>
-            <p class="worker-prof" lang="en">Frontend Developer</p>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
-          <li class="worker-info">
+          <li>
             <img src="./images/team-3.jpg" width="270" alt="team-3" />
-            <h3 class="worker-title">Николай Тарасов</h3>
-            <p class="worker-prof" lang="en">Marketing</p>
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
-          <li class="worker-info">
+          <li>
             <img src="./images/team-4.jpg" width="270" alt="team-4" />
-            <h3 class="worker-title">Михаил Ермаков</h3>
-            <p class="worker-prof" lang="en">UI Designer</p>
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer class="footer">
-      <a class="logo-footer" href="/"
-        ><span class="logo-style">Web</span>Studio</a
+    <footer>
+      <a href="/"
+        ><span>Web</span>Studio</a
       >
-      <address class="address">
-        <p class="address-info">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-list">
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
           <li>
-            <a class="address-list" href="mailto:info@example.com"
+            <a href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
           <li>
-            <a class="address-list" href="tel:+380991111111"
+            <a href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
