--- a/portfolio.html
+++ b/portfolio.html
@@ -4,154 +4,141 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="nav">
+    <header>
+      <nav>
         <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="nav-list">
-          <li><a class="nav-link" class="" href="index.html">Студия</a></li>
-          <li><a class="nav-link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="nav-link" href="">Контакты</a></li>
+          <li><a href="index.html">Студия</a></li>
+          <li><a href="portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="nav-address">
+      <ul>
         <li>
-          <a class="address-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <section>
-        <h1 class="hidden-title">Фильтр</h1>
-        <ul class="filter-btn">
+        <h1>Фильтр</h1>
+        <ul>
           <li>
-            <button class="btn-list-all" type="button">Все</button>
+            <button type="button">Все</button>
           </li>
           <li>
-            <button class="btn-list-web" type="button">Веб-сайты</button>
+            <button type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="btn-list-app" type="button">Приложения</button>
+            <button type="button">Приложения</button>
           </li>
           <li>
-            <button class="btn-list-design" type="button">Дизайн</button>
+            <button type="button">Дизайн</button>
           </li>
           <li>
-            <button class="btn-list-marketing" type="button">Маркетинг</button>
+            <button type="button">Маркетинг</button>
           </li>
         </ul>
-        <h2 class="hidden-title">Все предложения</h2>
-        <ul class="box">
-          <li class="box-list">
+        <ul>
+          <li>
             <img src="./images/website.jpg" width="370" alt="website" />
-            <h3 class="box-title">Технокряк</h3>
-            <p class="box-info">Веб-сайт</p>
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/basketball-poster-design.jpg"
               width="370"
               alt="basketball-poster-design"
             />
-            <h3 class="box-title">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h3>
-            <p class="box-info">Дизайн</p>
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p>Дизайн</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/restaurant-the-seafood.jpg"
               width="370"
               alt="restaurant-the-seafood"
             />
-            <h3 class="box-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="box-info">Приложение</p>
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <p>Приложение</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/project-prime.jpg"
               width="370"
               alt="project-prime"
             />
-            <h3 class="box-title">Проект <span lang="en">Prime</span></h3>
-            <p class="box-info">Маркетинг</p>
+            <h2>Проект <span lang="en">Prime</span></h2>
+            <p>Маркетинг</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/project-boxes.jpg"
               width="370"
               alt="project-boxes"
             />
-            <h3 class="box-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="box-info">Приложение</p>
+            <h2>Проект <span lang="en">Boxes</span></h2>
+            <p>Приложение</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/website-inspiration-has-no-borders.jpg"
               width="370"
               alt="website-inspiration-has-no-borders"
             />
-            <h3 class="box-title" lang="en">Inspiration has no Borders</h3>
-            <p class="box-info">Веб-сайт</p>
+            <h2 lang="en">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/design-limited-edition.jpg"
               width="370"
               alt="design-limited-edition"
             />
-            <h3 class="box-title">
-              Издание <span lang="en">Limited Edition</span>
-            </h3>
-            <p class="box-info">Дизайн</p>
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
+            <p>Дизайн</p>
           </li>
-          <li class="box-list">
+          <li>
             <img src="./images/project-lab.jpg" width="370" alt="project-lab" />
-            <h3 class="box-title">Проект <span lang="en">LAB</span></h3>
+            <h2>Проект <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
-          <li class="box-list">
+          <li>
             <img
               src="./images/growing-business.jpg"
               width="370"
               alt="growing-business"
             />
-            <h3 class="box-title" lang="en">Growing Business</h3>
-            <p class="box-info">Приложение</p>
+            <h2 lang="en">Growing Business</h2>
+            <p>Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer class="footer">
-      <a class="logo-footer" href="/"
-        ><span class="logo-style">Web</span>Studio</a
-      >
-      <address class="address">
-        <p class="address-info">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-list">
+    <footer>
+      <a href="/"><span>Web</span>Studio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
           <li>
-            <a class="address-list" href="mailto:info@example.com"
-              >info@example.com</a
-            >
+            <a href="mailto:info@example.com">info@example.com</a>
           </li>
           <li>
-            <a class="address-list" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
