--- a/index.html
+++ b/index.html
@@ -14,65 +14,67 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+        <ul class="list">
+          <li><a class="link" href="#">Студия</a></li>
+          <li><a class="link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="address" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section">
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+        <button class="btn" type="button">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Особенности</h2>
-        <ul>
+      <section class="section">
+        <h2 class="title-hidden">Особенности</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="specials-title">Внимание к деталям</h3>
+            <p class="specials-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="specials-title">Пунктуальность</h3>
+            <p class="specials-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="specials-title">Планирование</h3>
+            <p class="specials-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="specials-title">Современные технологии</h3>
+            <p class="specials-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/1.jpg" width="370" alt="programmer-working" />
           </li>
@@ -84,46 +86,44 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2">Наша команда</h2>
-        <ul>
+      <section class="section-workers">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./images/team-1.jpg" width="270" alt="team-1" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="worker-title">Игорь Демьяненко</h3>
+            <p class="worker-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/team-2.jpg" width="270" alt="team-2" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="worker-title">Ольга Репина</h3>
+            <p class="worker-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team-3.jpg" width="270" alt="team-3" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="worker-title">Николай Тарасов</h3>
+            <p class="worker-text" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/team-4.jpg" width="270" alt="team-4" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="worker-title">Михаил Ермаков</h3>
+            <p class="worker-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/"
-        ><span>Web</span>Studio</a
-      >
+    <footer class="footer">
+      <a class="logo" href="/"><span class="style">Web</span>Studio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
+        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
           <li>
-            <a href="mailto:info@example.com"
+            <a class="footer-address" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
           <li>
-            <a href="tel:+380991111111"
+            <a class="footer-address" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
