update html and css

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+        <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link" href="index.html">Студия</a></li>
-          <li><a class="link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="list-link" href="index.html">Студия</a></li>
+          <li><a class="list-link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="list-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="address" href="mailto:info@devstudio.com"
+          <a class="list-address" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="list-address" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section class="section">
-        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+      <section class="hero-section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <section class="section">
@@ -113,7 +113,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+      <a class="footer-logo" href="/"
+        ><span class="footer-style">Web</span>Studio</a
+      >
       <address>
         <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
