--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,21 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+        <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link" href="index.html">Студия</a></li>
-          <li><a class="link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="list-link" href="index.html">Студия</a></li>
+          <li><a class="list-link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="list-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="address" href="mailto:info@devstudio.com"
+          <a class="list-address" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="list-address" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
